--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,minimum-scale=1">
 	<title>Login</title>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 </head>
 
@@ -22,12 +23,13 @@
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
-				<input class="bg-blue-50" type="password" name="pass" placeholder="Password you'd use" id="pass" required>
+				<input class="bg-blue-50" type="password" name="pass" placeholder="Password you'd use" id="pass"
+					required>
 				<input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit"
 					value="Login">
 			</form>
 		</div>
-		<div class="ml-130 m-10">
+		<div class="m-10">
 			<h1 class="font-bold text-4xl">Login</h1>
 			<form action="/auth" method="post">
 				<label for="username">
@@ -45,5 +47,8 @@
 		</div>
 	</div>
 </body>
+<script>
+	
+</script>
 
 </html>
