--- a/login.html
+++ b/login.html
@@ -14,19 +14,21 @@
 	<div class="flex">
 		<div class="m-10">
 			<h1 class="font-bold text-4xl">Register</h1>
-			<form action="/createuser" method="post">
+			<form id="registerForm">
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
-				<input class="bg-blue-50" type="text" name="user" placeholder="Username you'd use" id="user" required>
+				<input class="bg-blue-50" type="text" name="user" placeholder="Username you'd use" id="registerUsername"
+					required>
 				<p></p>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
-				<input class="bg-blue-50" type="password" name="pass" placeholder="Password you'd use" id="pass"
-					required>
-				<input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit"
-					value="Login">
+				<input id="registerPassword" class="bg-blue-50" type="password" name="pass"
+					placeholder="Password you'd use" required>
+				<input id="buttonRegister"
+					class="cursor-not-allowed opacity-50 disabled bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+					type="submit" value="Register">
 			</form>
 		</div>
 		<div class="m-10">
@@ -35,12 +37,12 @@
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
-				<input class="bg-blue-50" type="text" name="username" placeholder="Username" id="username" required>
+				<input class="bg-blue-50" type="text" name="username" placeholder="Username" required>
 				<p></p>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
-				<input class="bg-blue-50" type="password" name="password" placeholder="Password" id="password" required>
+				<input class="bg-blue-50" type="password" name="password" placeholder="Password" required>
 				<input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit"
 					value="Login">
 			</form>
@@ -48,7 +50,45 @@
 	</div>
 </body>
 <script>
-	
+	$('#registerForm').on('submit', function (e) {
+		e.preventDefault();
+
+		const user = $('#registerUsername').val();
+		const pass = $('#registerPassword').val();
+
+		const response = fetch('/createuser', {
+			method: 'POST',
+			headers: { "Content-Type": "application/json" },
+			body: JSON.stringify({ user, pass })
+		});
+
+		const res = response.json();
+		$('.titleError').remove();
+
+		if (res.success) {
+			alert('Succes!');
+		} else if (res.errors) {
+			if (res.errors.username.length > 0) {
+				$('#registerUsername').after(`<p class="titleError text-red-500 text-sm mb-2">${res.errors.username}</p>`);
+			}
+		}
+	});
+1
+	$('#registerPassword').on('change', function () {
+		const passwordStrength = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}$/.test($('#registerPassword').val());
+
+		if (passwordStrength) {
+			$('.titleError').remove();
+			$('#buttonRegister').removeClass('cursor-not-allowed opacity-50 disabled').prop('disabled', false);
+		} else {
+			if ($('.titleError').length == 0) {
+				$('#registerPassword').after('<p class="titleError text-red-500 text-sm mb-4">Password must contain a symbol, a number, a capital letter, a small letter and be at least 8 characters long</p>');
+			}
+			$('#buttonRegister').addClass('cursor-not-allowed opacity-50 disabled').prop('disabled', true);
+		}
+	});
 </script>
+
+
 
 </html>
