--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <input myAtributForIdd="" type="text" id="tasksNewText"
               class="w-full rounded-md border border-gray-600 bg-gray-900 text-white p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none mb-4"
               placeholder="Type your new task here..."></input>
-            <button type="button" command="close" commandfor="dialogWindowForRedact"
+            <button type="button" onclick="document.getElementById('dialogWindowForRedact').close()"
               class="inline-flex w-full justify-center rounded-md bg-red-500 px-3 py-2 text-sm font-semibold text-white hover:bg-red-400  sm:w-auto">
               Cancel </button>
             <button type="button" id="buttonChangeTask"
@@ -83,7 +83,7 @@
             <input myAtributForIdd="" type="text" id="newTasksText" minlength="0" maxlength="500"
               class="w-full rounded-md border border-gray-600 bg-gray-900 text-white p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none mb-4"
               placeholder="Type your new task here...">
-            <button type="button" command="close" commandfor="dialogWindowForAdding"
+            <button type="button" onclick="document.getElementById('dialogWindowForAdding').close()"
               class="inline-flex w-full justify-center rounded-md bg-red-500 px-3 py-2 text-sm font-semibold text-white hover:bg-red-400  sm:w-auto">
               Cancel </button>
             <button id="buttonAddTask" type="button"
@@ -97,7 +97,7 @@
   </el-dialog>
   <h1 class="text-4xl">Todo App</h1>
   <form id="todo-form" class="mb-5 mt-2">
-    <button command="show-modal" commandfor="dialogWindowForAdding"
+    <button onclick="document.getElementById('dialogWindowForAdding').showModal()"
       class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
       type="button">Add</button>
     <span class="font-bold">Press the button "Add" if you want to add new task</span>
@@ -119,46 +119,6 @@
     const todoList = document.getElementById("todo-list");
     const todos = [];
 
-    $('.taskTitle').on('change', function () {
-      if ($(this).val().length < 5) {
-        if ($(this).siblings('.titleError').length == 0) {
-          $(this).after('<p class="titleError text-red-500 text-sm mb-4">Title must be at least 5 characters long</p>');
-        }
-        $('.buttonTask').addClass('cursor-not-allowed opacity-50');
-      } else if ($(this).siblings('.titleError').length > 100) {
-        if ($('.titleError').length == 0) {
-          $(this).after('<p class="titleError text-red-500 text-sm mb-4">Title must be lower than 100 characters long</p>');
-        }
-        $('.buttonTask').addClass('cursor-not-allowed opacity-50 disabled');
-      } else {
-        $('.titleError').remove();
-        $('.buttonTask').removeClass('cursor-not-allowed opacity-50 disabled');
-      }
-    });
-
-    $('#newTasksText').on('change', function () {
-      if ($('#newTasksText').val().length > 500) {
-        if ($('#textError').length == 0) {
-          $('#newTasksText').after('<p id="textError" class="text-red-500 text-sm mb-4">Title must be lower than 500 characters long</p>');
-        }
-        $('#buttonAddTask').addClass('cursor-not-allowed opacity-50 disabled');
-      } else {
-        $('#textError').remove();
-        $('#buttonAddTask').removeClass('cursor-not-allowed opacity-50 disabled');
-      }
-    });
-
-    $('#tasksNewText').on('change', function () {
-      if ($('#tasksNewText').val().length > 500) {
-        if ($('#textErrorChanging').length == 0) {
-          $('#tasksNewText').after('<p id="textErrorChanging" class="text-red-500 text-sm mb-4">Title must be lower than 500 characters long</p>');
-        }
-        $('#buttonChangeTask').addClass('cursor-not-allowed opacity-50 disabled');
-      } else {
-        $('#textErrorChanging').remove();
-        $('#buttonChangeTask').removeClass('cursor-not-allowed opacity-50 disabled');
-      }
-    });
     $(document).ready(async function () {
       const res = await fetch(API_URL);
       let todo = await res.json();
@@ -199,7 +159,7 @@
     <td class="border border-black px-4 py-2">
       <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border-2 border-blue-500 hover:border-nsparent rounded" id="taskButton-${todo.id}" onclick="changeClass(${todo.id})">${todo.completed ? "Uncomplete" : "Complete"} </button>
       <button class="bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border-2 border-red-500 hover:border-transparent rounded" onclick="deleteTodo(${todo.id})">Delete</button>
-      <button command="show-modal" commandfor="dialogWindowForRedact" onclick="openModaleWindow(${todo.id})" class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border-2 border-green-500 hover:border-transparent rounded">Rewrite</button>
+      <button onclick="openModaleWindow(${todo.id}); document.getElementById('dialogWindowForRedact').showModal()" class="bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border-2 border-green-500 hover:border-transparent rounded">Rewrite</button>
     </td>
   `;
 
@@ -215,11 +175,11 @@
     }
 
     async function toggleCompleted(id, text, bool, title) {
-      if (title.length < 5 || title.length > 100) return;
-      const idFromButton = document.getElementById(`taskButton-${id}`);
-      const curentBoxTitle = document.getElementById(`curentBoxTitle-${id}`);
-      const curentBoxText = document.getElementById(`curentBoxText-${id}`);
-
+      const idFromButton = $(`#taskButton-${id}`);
+      const curentBoxTitle = $(`#curentBoxTitle-${id}`);
+      const curentBoxText = $(`#curentBoxText-${id}`);
+      $('.titleError').remove();
+      $('.textError').remove();
       const reques = await fetch(`${API_URL}/${id}`, {//отправляю на бекенд запрос
         method: "PUT",
         body: JSON.stringify({ completed: bool, title: text, mainTitle: title }),
@@ -227,19 +187,30 @@
       });
       const gettedTodo = await reques.json();
 
-      if (reques.status == 200) { // проверяю все ли прошло успешно
-        document.getElementById("dialogWindowForRedact").close();
-        curentBoxTitle.textContent = gettedTodo.mainTitle;
-        curentBoxText.textContent = gettedTodo.title;
+      if (gettedTodo.errors) {
+        if (gettedTodo.errors.mainTitle) {
+          $("#tasksNewTitle").after(`<p class="titleError text-red-500 text-sm mb-4">${gettedTodo.errors.mainTitle}</p>`);
+        }
 
-        if (gettedTodo.completed == true) {//меня строчку на "выполнено" если пользователь выбрал кнопку "выполнить" 
-          curentBoxTitle.classList.add("completed");
-          curentBoxText.classList.add("completed");
-          idFromButton.textContent = "Uncomplete";
-        } else { //меня строчку на "выполнить" если пользователь выбрал кнопку "выполнено" 
-          idFromButton.textContent = "Complete";
-          curentBoxTitle.classList.remove("completed");
-          curentBoxText.classList.remove("completed");
+        if (gettedTodo.errors.title) {
+          $("#tasksNewText").after(`<p id="textError" class="titleError text-red-500 text-sm mb-4">${gettedTodo.errors.title}</p>`);
+        }
+        return;
+      }
+
+      if (reques.status == 200) {
+        document.getElementById("dialogWindowForRedact").close();
+        curentBoxTitle.text(gettedTodo.mainTitle);
+        curentBoxText.text(gettedTodo.title);
+
+        if (gettedTodo.completed == true) {
+          curentBoxText.addClass("completed");
+          curentBoxTitle.addClass("completed");
+          idFromButton.text("Uncomplete");
+        } else {
+          idFromButton.text("Complete");
+          curentBoxTitle.removeClass("completed");
+          curentBoxText.removeClass("completed");
         }
       }
     }
@@ -275,18 +246,31 @@
       }
     }
     async function createTodo(text, title) {
-      if (title.length < 5 || title.length > 100) return;
+
       const reques = await fetch(API_URL, {
         method: "POST",
         body: JSON.stringify({ title: text, completed: false, mainTitle: title }),
         headers: { "Content-Type": "application/json" },
       });
+      const task = await reques.json();
+      if (task.errors) {
+        $('.titleError').remove();
+        $('#textError').remove();
+
+        if (task.errors.mainTitle) {
+          $('#newTasksTitle').after(`<p class="titleError text-red-500 text-sm mb-4">${task.errors.mainTitle}</p>`);
+        }
+
+        if (task.errors.title) {
+          $('#newTasksText').after(`<p id="textError" class="text-red-500 text-sm mb-4">${task.errors.title}</p>`);
+        }
+        return;
+      }
+
       if (reques.status == 200) {
         document.getElementById("dialogWindowForAdding").close();
         $('#newTasksText').val("");
         $('#newTasksTitle').val("");
-        const task = await reques.json();
-        console.log(task)
         const tableRow = createTodoElement(task);
         todoList.appendChild(tableRow);
         todos.push(task);
